--- a/public/index.html
+++ b/public/index.html
@@ -50,12 +50,16 @@
   </div>
 </div>
 
+<div class="container-fluid article-container">
+ 
+
+
       <div>
           <table id="articles">
         
           </table>
       </div>
-      <div id="notes"></div>
+    
 
 
 <footer class="footer">
